Fixed issue with z-index and click behavior on menu

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -7,6 +7,7 @@
     width: 255px;
     position: absolute;
     box-sizing: border-box;
+    z-index: -1;
     /*-webkit-transform: translate3d(-255px, 0px, 0px);*/
 }
 
